[gd_scene load_steps=4 format=2]

[ext_resource path="res://Tests/Map Test/Shooter.gd" type="Script" id=1]
[ext_resource path="res://Tests/Gameplay Images/icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[node name="Shooter" type="KinematicBody2D"]

input_pickable = false
collision_layer = 2
collision_mask = 5
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="right" type="RayCast2D" parent="." index="2"]

position = Vector2( 32, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( 736, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="left" type="RayCast2D" parent="." index="3"]

position = Vector2( -32, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( -736, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="up" type="RayCast2D" parent="." index="4"]

position = Vector2( 0, -32 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, -480 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="leftUp" type="RayCast2D" parent="." index="5"]

position = Vector2( -32, -32 )
enabled = true
exclude_parent = true
cast_to = Vector2( -736, -480 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="rightUp" type="RayCast2D" parent="." index="6"]

position = Vector2( 32, -32 )
enabled = true
exclude_parent = true
cast_to = Vector2( 736, -480 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Gun" type="Position2D" parent="." index="8"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


